<resources>
    <string name="app_name">Roommates</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Feed</string>
    <string name="title_section2">Me</string>
    <string name="title_section3">Tasks</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="logo_description">Logo for the application. 1080x300</string>
    <string name="feed_name">Feed</string>
    <string name="signup_text">Sign up</string>
    <string name="register_button">"Register</string>
    <string name="firstname_field">First name</string>
    <string name="lastname_field">Last name</string>
    <string name="email_field">E-mail</string>
    <string name="repeat_password_field">Repeat Password</string>
    <string name="forgot_password_button">FORGOT\nPASSWORD</string>
    <string name="expenses_name">Expenses</string>
    <string name="notes_header">Notes</string>
    <string name="events_header">Events</string>
    <string name="new_note_button">New Note</string>
    <string name="view_all_notes_button">View All Notes</string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="add_note_button">Add Note</string>
    <string name="note_added_toast">New Note Added!</string>
    <string name="invitations_header">Invitations</string>
    <string name="new_household_button">Create New Household</string>
    <string name="household_members_header">Household Members</string>
    <string name="invite_button">Invite Roommate to Household</string>
    <string name="leave_household_button">Leave Household</string>
    <string name="log_out_button">Log out</string>
    <string name="dummy_text">"dummy"</string>
    <string name="name_field">Name</string>
    <string name="my_household_button">Household Settings</string>
    <string name="edit_profile_button">Profile Information Settings</string>
    <string name="displayName_field">Display Name</string>
    <string name="changePassword_button">Change password</string>
    <string name="update_button">Save Changes</string>
    <string name="new_password_field">New Password</string>
    <string name="old_password_field">Old password</string>
    <string name="profilePic">ProfilePic</string>
    <string name="title_activity_test_task_list_elements">TestTaskListElementsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_section4">Expenses</string>
    <string name="event_happened">Event happened </string>
    <string name="title_event_details">Event Details</string>
    <string name="button_ok">OK</string>
    <string name="note_by">Note by</string>
    <string name="written">Written</string>
    <string name="title_create_new_note">Create New Note</string>
    <string name="button_add_note">Add Note</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_log_out">Log out</string>
    <string name="dialog_title_log_out">Log out</string>
    <string name="dialog_message_log_out">Do you really want to log out?</string>
    <string name="load_more">Load more...</string>
    <string name="leaving_household">Leaving Household</string>
    <string name="please_wait"> Please wait ... </string>
    <string name="warning_could_not_leave_household">Could not leave household, please try again</string>
    <string name="dialog_title_leave_household">Leave household</string>
    <string name="dialog_message_leave_household">Do you really want to leave the household?</string>
    <string name="button_confirm_leave_household">Leave household</string>
    <string name="dialog_title_invite_user">Invite user to Household</string>
    <string name="dialog_button_confirm_invite">Invite</string>
    <string name="progressdialog_title_inviting_user">Inviting User to Household</string>
    <string name="progressdialog_message_inviting_user"> Please wait ... </string>
    <string name="toast_user_was_invited">User was invited to household</string>
    <string name="progressdialog_title_accepting_invitation">Accepting Invitation</string>
    <string name="progressdialog_message_accepting_invitation">Please wait ... </string>
    <string name="toast_could_not_accept_invitation">Could not accept invitation, please try again</string>
    <string name="progress_dialog_title_creating_household">Creating Household</string>
    <string name="progress_dialog_message_creating_household"> Please wait ... </string>
    <string name="toast_household_created_successfully">New Household was Created.</string>
    <string name="toast_created_household_unsuccesfully">Could not create new household, please try again</string>
    <string name="dialog_title_create_new_household">Create new Household</string>
    <string name="dialog_positive_button_create_new_household">OK</string>
    <string name="toast_change_password_wrong_password">You entered the wrong password</string>
    <string name="toast_change_password_invalid">Password is not valid. A Valid password needs to be at least 6 characters long, have at least one upper and one lower case letter and at least one number</string>
    <string name="toast_change_password_dont_match">Passwords do not match</string>
    <string name="toast_change_password_success">Password changed</string>
    <string name="changing_password">Changing Password</string>
    <string name="all_field_must_be_filled_out">All fields must be filled out</string>
    <string name="changing_profile_information">Changing Profile Information</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="tasks_section_item_title_todo">Todo</string>
    <string name="tasks_section_item_title_finished">Finished</string>
    <string name="tasks_item_created_by">Created by</string>
    <string name="toast_new_task_list_added">New Task List added</string>
    <string name="dialog_create_new_task_list_title">Create new task list</string>
    <string name="dialog_OK">OK</string>
    <string name="options_menu_task_list_mark_as_finished">Mark as Finished</string>
    <string name="options_menu_task_list_mark_as_ufinished">Mark as Unfinished</string>
    <string name="options_menu_task_list_loading">Loading...</string>
    <string name="toast_task_list_elements_refresh">Refreshing...</string>
    <string name="alert_dialog_task_list_long_press_change_title">Change title</string>
    <string name="alert_dialog_task_list_long_press_delete">Delete task</string>
    <string name="alert_dialog_delete_task_title">Delete task</string>
    <string name="alert_dialog_delete_task_message">Are you sure you want to delete this task?</string>
    <string name="alert_dialog_delete_task_yes">Yes</string>
    <string name="alert_dialog_delete_task_cancel">Cancel</string>
    <string name="alert_dialog_create_new_task_list_element_title">Create new task list element</string>
    <string name="alert_dialog_create_new_task_list_element_message">OK</string>
    <string name="new_task_list_element_created">New Task List Element Created</string>
    <string name="deleting_task">Deleting task</string>
    <string name="task_was_deleted">Task was deleted</string>
    <string name="rename_task">Rename task</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="task_list_name_changed">Task List Name Changed</string>
    <string name="rename_task_list">Rename Task List</string>
    <string name="ok">OK</string>
    <string name="delete_task_list_confirmation_title">Are You Sure You Want To Delete This Task List?</string>
    <string name="yes">Yes</string>
    <string name="deleting_list">Deleting List</string>
    <string name="no">No</string>
    <string name="unpaid_section_title">Not paid up</string>
    <string name="created_by">Created by</string>
    <string name="paid_section_title">Paid up</string>
    <string name="subtitle_expense_is_settled">Expense settled</string>
    <string name="subtitle_you_do_not_owe_anything">You do not owe anything for this</string>
    <string name="subtitle_you_owe">You owe </string>
    <string name="subtitle_you_owe_2"> for this expense</string>
    <string name="subtitle_you_are_owed_1">You are owed </string>
    <string name="subtitle_you_are_owed_2"> for this expense</string>
    <string name="edit_expense_not_allowed">You cannot edit this expense. It is not yours.</string>
    <string name="edit_description">Edit description</string>
    <string name="description_was_changed">Description was changed</string>
    <string name="changing_description">Changing description</string>
    <string name="total_expense_amount">Total expense amount</string>
    <string name="changing_amount">Changing amount</string>
    <string name="amount_was_changed">Amount was changed</string>
    <string name="not_paid_up">Not paid up</string>
    <string name="paid_up">Paid up</string>
    <string name="has_paid_up">Has paid up</string>
    <string name="owes">Owes </string>
    <string name="rename_expense">Rename expense</string>
    <string name="changing_name">Changing name</string>
    <string name="name_was_changed">Name was changed</string>
    <string name="delete_expense_question_mark">Delete expense?</string>
    <string name="are_you_sure_you_want_to_delete_this_expense">Are you sure you want to delete this expense?</string>
    <string name="loading_expense">Loading expense</string>
    <string name="could_not_get_expense">Error: Could not get expense!</string>
    <string name="could_not_parse_amount">Could not get amount</string>
    <string name="fill_out_all_fields_new_expense">Fill out all the fields. There must be at least one person paying</string>
    <string name="saving">Saving</string>
    <string name="expense_saved">Expense was saved</string>
    <string name="loading">Loading</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="reset_email_sent_with_instructions">An e-mail was successfully sent with reset instructions</string>
    <string name="all_fields_must_be_filled_out">All fields must be filled out</string>
    <string name="email_not_valid">Email address not valid</string>
    <string name="password_not_valid">Password is not valid. A Valid password needs to be at least 6 characters long, have at least one upper and one lower case letters and at least one number</string>
    <string name="passwords_dont_match">Passwords does not match</string>
    <string name="signing_up">Signing Up</string>
    <string name="sign_up_successful">New user successfully created</string>
    <string name="username_email_taken">E-mail already in use. Try resetting your password</string>
    <string name="email_taken">E-mail already in use. Try resetting your password</string>
    <string name="something_went_wrong">Something went wrong. Try again later</string>
    <string name="resetting_password">Resetting Password</string>
    <string name="profile_information_header">PROFILE INFORMATION</string>
    <string name="email_title">E-mail</string>
    <string name="display_name_title">Display Name</string>
    <string name="settings_header">SETTINGS</string>
    <string name="roommates_header">Roommates</string>
    <string name="expense">Expense</string>
    <string name="owed">Owed</string>
    <string name="total_amount">Total Amount</string>
    <string name="details">Details</string>
    <string name="information_about_expense">EXPENSE INFORMATION</string>
    <string name="people_involved">PEOPLE INVOLVED</string>
    <string name="expense_name">Expense name</string>
    <string name="description">Description</string>
</resources>