<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff3533bd">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textColor="#ffffffff"
            android:layout_above="@+id/LinearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"
            android:layout_marginTop="90dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/editTextDisplayName_signup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/displayName_field"
            android:inputType="textCapWords"
            android:background="#ffffffff"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextEmail_signup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/email_field"
            android:inputType="textAutoComplete|textAutoCorrect|textEmailAddress"
            android:background="#ffffffff"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextPassword_signup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:background="#ffffffff"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextRptPassword_signup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/repeat_password_field"
            android:inputType="textPassword"
            android:background="#ffffffff"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonRegistrer"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@color/DarkBlue"
               android:text="@string/register_button"
               android:textColor="#ffffffff"
            android:layout_above="@+id/progressBar_Signup"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

</RelativeLayout>
