<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightGrey">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/textOldPassword"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:hint="@string/old_password_field"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:background="#ffffffff"
            android:gravity="center"/>

        <EditText
            android:id="@+id/textNewPassword"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/new_password_field"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginBottom="40dp"
            android:background="#ffffffff"
            android:gravity="center">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/textRepeatPassword"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/repeat_password_field"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginBottom="40dp"
            android:background="#ffffffff"
            android:gravity="center"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonChangePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/changePassword_button"
        android:textColor="@color/DarkBlue"
        android:layout_above="@+id/progressBar_ChangePassword"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar_ChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
