<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="fill_parent"
                android:gravity="center"
                android:id="@+id/edit_text_expense_name"
                android:hint="@string/expense_name"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#ffffffff"
                android:singleLine="true" />

            <EditText
                android:layout_width="fill_parent"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/edit_text_total_amount"
                android:hint="@string/total_amount"
                android:layout_marginBottom="10dp"
                android:layout_height="35dp"
                android:singleLine="true"
                android:background="#ffffffff"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="fill_parent"
                android:gravity="center"
                android:id="@+id/edit_text_description"
                android:hint="@string/description"
                android:layout_marginBottom="10dp"
                android:layout_height="35dp"
                android:background="#ffffffff"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView4"
            android:hint="@string/roommates_who_owes"
            android:layout_margin="10dp" />

        <ListView
            android:background="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewMemberList"
            android:choiceMode="multipleChoice" />

    </LinearLayout>

</RelativeLayout>